Fix vertical alignment

--- a/src/roboconf.less
+++ b/src/roboconf.less
@@ -432,6 +432,7 @@ html {
 		border: solid @rbcf_color 1px;
 		padding: 16px;
 		margin-left: 16px;
+		margin-top: -3px;
 		
 		visibility: hidden;
 		opacity: 0;
